fixed overflow on images on homepage.

--- a/babycenter/static/css/modules/_article.scss
+++ b/babycenter/static/css/modules/_article.scss
@@ -20,7 +20,9 @@
 }
 
 .article__image {
-  width: 100%;
+  img {
+    width: 100%;
+  }
 }
 
 
